# survey-backend

./: .coderabbit.yaml  .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  buildspec.yml  config.py  deploy-eb.sh  docker-compose.dev.single.yml  docker-compose.dev.yaml  docker-compose.dev.yml  main.py  main_config.py  makefile  mypy.ini  pyproject.toml  pytest.ini  terraform.tfstate
.github/workflows/: README.md  deploy-dev.yml  deploy-prod.yml  deployment.yml
alembic/: env.py
alembic/versions/: 137333e4b14a_add_index_on_salary_stat_job_id.py  2ecbeb6df1f4_유저_테이블_salaie_오타_수정.py  499158777778_유저_테이블_salaie_오타_수정.py  4bb919c4b03c_job_테이블_unique_설정_변경.py  57bbb5ca3f2d_rename_monthly_rent_to_is_monthly_rent_.py  5b548ef6dc47_user_profile_생성.py  6213a7491fb9_job_테이블_english_필드_제거.py  841eefca5ed0_create_salary_submission_table.py  974193a231be_연봉_통계치_테이블_나이대_제거.py  a06474308e68_env_파일_유저_테이블_추가.py  a25b8b71adf6_uuid_16바이트_저장.py  a942af9bc59f_user_profile_salary_id_uuid_fk_적용.py  b23239d140d5_model_세팅.py  b98d07514465_recreate_dropped_salary_submission_table.py  cb208d6c850b_유저_테이블_추가.py  d22ec8b90395_테이블_초기화.py  dcfd87f5b085_initial_migration_with_all_tables.py  e51005928dc6_user_profile_성별_str_변경.py  e65333f22368_id_int로_재조정.py  f88e7b586f70_3단계_유저_입력을_고려한_model_변경.py
app/common/: enums.py  response.py
app/common/config/: app_config.py
app/common/database/: monitoring_setup.py
app/common/docs/: responses.py
app/common/exception_handlers/: asset_handler.py  auth_handler.py  base_handler.py  handler_register.py
app/common/logger/: config.py  constant.py  enums.py  mixin.py
app/common/middleware/: logger.py  query_monitoring_middleware.py
app/common/mixin/: timestamp.py
app/common/monitoring/: query_monitor.py
app/common/redis_repository/: general_redis_repository.py
app/common/repository/: abstract_redis_repository.py  abstract_repository.py
app/common/schemas/: base_schema.py
app/common/utils/: profile.py
app/data/: database_data_setting.py  excel.py
app/data/wage_center/: constant.py  data_collect.py
app/data/wanted/: data_collect.py
app/email/: render.py  service.py
app/module/asset/: dto.py  enum.py  enums.py  logger.py  model.py  redis_repository.py
app/module/auth/: enum.py  enums.py  logger.py  model.py  response.py
aws_lambda/: Makefile
aws_lambda/dependencies/base/: Dockerfile  Makefile  requirements.txt
aws_lambda/email/common/: base.html
aws_lambda/email/onboarding/: handler.py  makefile  repository.py  requirements.txt  service.py  template.html
aws_lambda/email/shared/: db_config.py
aws_lambda/shared/: Makefile  auth_model.py  db_config.py  enums.py
aws_lambda/shared/model/: asset_model.py  auth_model.py
aws_lambda/shared/util/: time.py
database/: config.py  constant.py  dependency.py  logger.py
docs/: QUERY_OPTIMIZATION_GUIDE.md
etc/: age_group_wage.xlsx  wanted_job.xlsx
infra/bigquery/: Makefile  datasets.tf  main.tf  main_gcloud.tf.example  tables.tf  variables.tf
infra/cloudwatch-alarms/: Makefile  README.md  alarms_critical.tf  alarms_warning.tf  lambda_discord.tf  main.tf  outputs.tf  sns.tf  terraform-dev.plan  variables.tf
infra/infrastructure/: Makefile  README.md  cloudwatch_logs.tf  deploy-eb.sh  elastic_beanstalk.tf  elasticache.tf  main.tf  outputs.tf  rds.tf  route53.tf  s3.tf  variables.tf
nginx/conf.d/: default.conf
test/: conftest.py
test/fixtures/: asset_fixture.py  asset_mock_fixture.py  auth_fixture.py  full_fixture.py  test_asset_fixture.py  test_auth_fixture.py  test_full_fixture.py
test/fixtures/test_model/: test_asset_model.py  test_auth_model.py  test_full_model.py
test/load_test/: Makefile  locustfile.py  report.html
test/test_conftest/: README.md  __init__.py  test_database_fixtures.py  test_http_client_fixtures.py  test_integration_fixtures.py
test/unit_test/: conftest.py
test/unit_test/fixtures/: asset_fixture.py  auth_fixture.py  (+3 more)
(+80 files in other folders)
